[package]
name = "firecracker-spawn"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DavidVentura/firecracker-spawn"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-bindings = { version = "0.7.0", features = ["fam-wrappers"] }
linux-loader = "0.10.0"
vmm = { git = "https://github.com/DavidVentura/firecracker.git", branch = "hugepages-minimal" }
utils = { git = "https://github.com/DavidVentura/firecracker.git", branch = "hugepages-minimal" }

[patch.crates-io]
kvm-bindings = { git = "https://github.com/firecracker-microvm/kvm-bindings", tag = "v0.7.0-2", features = ["fam-wrappers"] }
