[package]
name = "firecracker-spawn"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DavidVentura/firecracker-spawn"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-bindings = { version = "0.7.0", features = ["fam-wrappers"] }
linux-loader = "0.10.0"
vmm = { git = "https://github.com/DavidVentura/firecracker.git", branch = "serial-only" }
utils = { git = "https://github.com/DavidVentura/firecracker.git", branch = "serial-only" }
#vmm = { path = "/home/david/git/firecracker/src/vmm" }
#utils = { path = "/home/david/git/firecracker/src/utils" }

[patch.crates-io]
kvm-bindings = { git = "https://github.com/firecracker-microvm/kvm-bindings", tag = "v0.7.0-2", features = ["fam-wrappers"] }

[dev-dependencies]
cpio = "0.4.0"
#test-binary = "3.0.2"
test-binary = { git = "https://gitlab.com/davidv123/test-binary.git", branch = "main" }
